# TechnoparkCinema

./: .gitignore  CMakeLists.txt
http_server/include/: HttpRequest.hpp  HttpResponse.hpp  ResponseBuilder.hpp  authentication.hpp
http_server/src/: HttpRequest.cpp  HttpResponse.cpp  main.cpp  test.cpp
tests/: HttpResponseTests.cpp
tests/data/requests/: authorization_1.bytes  static_get.bytes  video_1.bytes
tests/data/responses/: options.bytes  static_get.bytes  video_1.bytes
